fixed scrollbar

--- a/src/components/home/ReviewsCarousel.module.css
+++ b/src/components/home/ReviewsCarousel.module.css
@@ -52,6 +52,7 @@
   font-size: 1.2rem;
   border: none;
   cursor: pointer;
+  color: black;
   padding-left: 0px;
   text-decoration: none;
 }
